--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </figure>
     </article>
   </section>
-  <cancas id="stage"></cancas>
+  <canvas id="stage"></canvas>
   <script type="text/javascript" src="dist/app.js"></script>
   </body>
 </html>
