--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   <section class="container">
     <article class="tile">
       <figure class="tile__figure">
-        <img data-src="src/img/duomo.jpg" data-hover="src/img/duomo.jpg" class="tile__image" alt="My image" width="400" height="300" />
+        <img src="src/img/duomo.jpg" hover="src/img/duomo-interno.jpg" class="tile__image" alt="My image" width="400" height="300" />
       </figure>
     </article>
   </section>
+  
   <canvas id="stage"></canvas>
   <script type="text/javascript" src="dist/app.js"></script>
   </body>
