--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   <section class="container">
     <article class="tile">
       <figure class="tile__figure">
-        <img src="src/img/duomo.jpg" hover="src/img/duomo-interno.jpg" class="tile__image" alt="My image" width="400" height="300" />
+        <img src="src/img/duomo.jpg" data-hover="https://images.unsplash.com/photo-1522609925277-66fea332c575?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
+ class="tile__image" alt="My image" width="400" height="300" />
       </figure>
     </article>
   </section>
-  
+
   <canvas id="stage"></canvas>
   <script type="text/javascript" src="dist/app.js"></script>
   </body>
