--- a/index.html
+++ b/index.html
@@ -6,16 +6,23 @@
     <title></title>
   </head>
   <body>
-  <section class="container">
-    <article class="tile">
-      <figure class="tile__figure">
-        <img src="src/img/duomo.jpg" data-hover="https://images.unsplash.com/photo-1522609925277-66fea332c575?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
- class="tile__image" alt="My image" width="400" height="300" />
-      </figure>
-    </article>
-  </section>
+    <div id="app">
+             <section class="container">
+                 <article class="tile">
+                     <figure class="tile__figure">
+                         <img
+                             src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
+                             data-hover="https://images.unsplash.com/photo-1522609925277-66fea332c575?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
+                             class="tile__image"
+                             alt="My image"
+                             width="300"
+                         />
+                     </figure>
+                 </article>
+             </section>
 
-  <canvas id="stage"></canvas>
+             <canvas id="stage"></canvas>
+         </div>
   <script type="text/javascript" src="dist/app.js"></script>
   </body>
 </html>
